<resources>
    <string name="app_name">Agenda</string>
    <string name="titulo">Titulo</string>
    <string name="contenido">Contenido</string>
    <string name="Agregar">Agregar</string>
    <string name="Cancelar">Cancelar</string>
    <string name="btnBuscar">Buscar Nota</string>
    <string name="btnModificar">Modificar Nota</string>
    <string name="title_activity_menu_navegacion">MenuNavegacion</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="Audio">Audio</string>
    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Galeria</string>
    <string name="menu_slideshow">Compartir</string>
    <string name="title_activity_boton_inferior">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="Camara">Camara</string>
    <string name="title_notifications">Notificaciones</string>
    <string name="registro_notas">Registro Notas</string>
    <string name="lista_de_notas">Lista de Notas</string>
</resources>